--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -80,4 +80,4 @@ jobs:
     #      run: kubectl apply -f ingress-argocd.yaml -n argocd
 
       #- name: Terraform Destroy
-      #  run: terraform destroy -auto-approve
+      #  run: terraform destroy -auto-approv
