--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -61,8 +61,8 @@ jobs:
       - name: Terraform Plan
         run: terraform plan 
 
-    #    - name: Terraform Apply.
-    #      run: terraform apply -auto-approve 
+      - name: Terraform Apply.
+        run: terraform apply -auto-approve 
 
     #    - name: 'install kubectl'
     #      run: |
@@ -80,4 +80,4 @@ jobs:
     #      run: kubectl apply -f ingress-argocd.yaml -n argocd
 
       #- name: Terraform Destroy
-      #  run: terraform destroy -auto-approv
+      #  run: terraform destroy -auto-approve
