--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -33,7 +33,6 @@ jobs:
           aws-region: ${{ secrets.AWS_REGION }}
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          # role-to-assume removed
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1
@@ -45,6 +44,18 @@ jobs:
           curl -sLo tfsec https://github.com/aquasecurity/tfsec/releases/download/v1.28.11/tfsec-linux-amd64
           chmod +x tfsec
           ./tfsec --version
+
+      # -----------------------------
+      # CLEANUP EXISTING nginx-ingress
+      # -----------------------------
+      - name: Cleanup existing nginx-ingress (if any)
+        run: |
+          if helm status nginx-ingress -n ingress-nginx >/dev/null 2>&1; then
+            helm uninstall nginx-ingress -n ingress-nginx --no-hooks
+          fi
+          if kubectl get namespace ingress-nginx >/dev/null 2>&1; then
+            kubectl delete namespace ingress-nginx --force --grace-period=0
+          fi
 
       - name: Terraform Init
         run: terraform init
@@ -71,13 +82,18 @@ jobs:
           sudo mv ./kubectl /usr/local/bin/kubectl
 
       - name: Authenticate to EKS Cluster
-        run: aws eks update-kubeconfig --name ${{ vars.EKS_CLUSTER_NAME }} --region us-east-1
+        run: aws eks update-kubeconfig --name ${{ vars.EKS_CLUSTER_NAME }} --region ${{ env.AWS_REGION }}
 
       - name: Deploy ClusterIssuer to EKS
         run: kubectl apply -f ClusterIssuer.yaml
 
-      - name: Deploy ArgoCD ingress rule to EKS
+      - name: Deploy ArgoCD Ingress to EKS
         run: kubectl apply -f ingress-argocd.yaml -n argocd
+
+      # Optional: Terraform Destroy
+      # - name: Terraform Destroy
+      #   run: terraform destroy -auto-approve
+
 
 
       #- name: Terraform Destroy
