--- a/module-eks/nginx-ingress-values.yaml
+++ b/module-eks/nginx-ingress-values.yaml
@@ -2,7 +2,7 @@ controller:
   ingressClassResource:
     name: external-nginx
   service:
-    enabled: true
+    enabled: false
     type: ClusterIP   # <-- changed from LoadBalancer to ClusterIP
     annotations: {}
 
